<resources>
    <string name="app_name">ASM_P2</string>
    <string name="todo">TODO</string>
    <string name="description">logo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_anonymously">ANONYMOUSLY USER</string>
    <string name="action_anonymously2">CONTINUE ANONYMOUSLY</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="be_in_touch">Be in touch</string>
    <string name="error_sign_in">UPS… coudn\'t Sign In</string>
    <string name="error_sign_in2">Your username and password don\'t match.</string>
    <string name="error_sign_in3">Please, try again.</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="skip_tutorial">Skip tutorial</string>
    <string name="networking">Networking</string>
    <string name="learn">Learn</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_news">News</string>
    <string name="menu_articles">Articles</string>
    <string name="menu_events">Events</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_faq">FAQS</string>
    <string name="menu_settings">Settings</string>
    <string name="dev_community">Dev Community</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="sandra_adams">Sandra Adams</string>
    <string name="sandra_adams_email_com_email">sandra.adams@email.com</string>
    <string name="string_search">search</string>
    <string name="title_error_login_activity">ErrorLoginActivity</string>
    <string name="title_faqs_activity">FAQS</string>

    <string name="articlesfragment">ArticlesFragment</string>
    <string name="article_title" translatable="false">Problemas con NavGraph</string>
    <string name="article_description_text" translatable="false">Secondary line text Lorem</string>
    <string name="article_author_text" translatable="false">Tomas</string>
    <string name="article_tags" translatable="false">Android Jetpack</string>
    <string name="title_activity_article_detail">Article Detail</string>
    <string name="action_fav">action_fav</string>
    <string name="action_bookmark">action_bookmark</string>

</resources>
