<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_articles"
            android:icon="@drawable/baseline_people_24"
            android:title="@string/menu_articles" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/baseline_grade_24"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/baseline_schedule_24"
            android:title="@string/menu_calendar" />
    </group>

    <group
        android:id="@+id/profile_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_profile" />
    </group>

    <group
        android:id="@+id/app_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/baseline_help_24"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>

</menu>
